css/popups.css
#errorPopupCover {
	position: fixed;
	bottom: 0;
	width: 100vw;
	height: 100vh;
	background-color: #00000040;
	z-index: 100;
	display: flex;
	align-items: center;
	justify-content: center;
	padding-left: calc(100vw * var(--shiftPercentageLeft) * var(--counterTranslationScaling));
	padding-right: calc(100vw * var(--shiftPercentageRight) * var(--counterTranslationScaling));
	transform: translateX(calc(-100vw * var(--shiftPercentageLeft) * var(--counterTranslationScaling)));
}

#errorPopup {
	max-width: 72vw;
	background-color: #368a36;
	border: 5px solid #ffbd17;
	border-radius: 1vh;
	text-align: center;
	padding: 8px;
	max-height: 100vh;
	overflow-y: scroll;
}

#errorPopup .headerText {
	font-size: 2.3em;
	color: #ffe100;
	margin-block-start: 0;
	margin-block-end: 0;
}

#errorPopup #messageText {
	font-size: 1.7em;
	color: white;
	margin-bottom: 0;
	margin-block-start: 0.5em;
}


#notificationBar {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 99; /*Below errorPopupCover*/
	background-color: #fafa70;
	text-align: center;
	font-size: 1em;
	min-height: 50px;
}

@keyframes fadeInAndOut {
  0% {
	  opacity: 1;
  }
  50% {
	  opacity: 1;
  }
  75% {
	  opacity: 0.8;
  }
  100% {
	  opacity: 0;
  }
}

.blocklessAlertCover {
	position: absolute;
	width: 100vw;
	height: 100vh;
	z-index: 98;
	opacity: 0;
	pointer-events: none;
	padding-left: calc(100vw * var(--shiftPercentageLeft) * var(--counterTranslationScaling));
	padding-right: calc(100vw * var(--shiftPercentageRight) * var(--counterTranslationScaling));
	transform: translateX(calc(-100vw * var(--shiftPercentageLeft) * var(--counterTranslationScaling)));
}

.blocklessAlertCover p {
	text-align: center;
	font-size: 3vw;
	margin:0;
	height: 100vh;
	line-height: 100vh;
}

